--- a/www/index.html
+++ b/www/index.html
@@ -45,18 +45,24 @@
             <div data-role="content" data-theme="b" id="Login_Content">
                 <input type="text" id="username" placeholder="Kullanıcı Adı">
                 <input type="password" id="password" placeholder="Parola :)">
-                <button onclick="login()"> Login </button>
+                <button type="button" value="Button" onclick="login()"> Login </button>
             </div>
         </div>
 
         <div data-role="page" data-theme="b" id="projectsPage">
-            <div data-role="header" data-theme="b">
-                <h2> Projects </h2>
+
+            <div data-role="collapsible" data-theme="b" data-content-theme="b" >
+                <h2 > Projects </h2>
+                <div id="Projects_Content" ></div>
             </div>
 
-            <div data-role="content" data-theme="b" id="Projects_Content">
-                
+            <div data-role="collapsible" data-theme="b" data-content-theme="b" >
+                <h2 > Languages </h2>
+                <div id="Languages_Content" ></div>
             </div>
+
         </div>
+
+
     </body>
 </html>
