--- a/www/index.html
+++ b/www/index.html
@@ -49,14 +49,9 @@
             </div>
         </div>
 
-        <div data-role="page" data-theme="b" id="projectsPage">
+        <div data-role="page" data-theme="b" id="languagesPage">
 
-            <div data-role="collapsible" data-theme="b" data-content-theme="b" >
-                <h2 > Projects </h2>
-                <div id="Projects_Content" ></div>
-            </div>
-
-            <div data-role="collapsible" data-theme="b" data-content-theme="b" >
+           <div data-role="collapsible" data-theme="b" data-content-theme="b" >
                 <h2 > Languages </h2>
                 <div id="Languages_Content" ></div>
             </div>
