--- a/www/index.html
+++ b/www/index.html
@@ -45,11 +45,11 @@
             <div data-role="content" data-theme="b" id="Login_Content">
                 <input type="text" id="username" placeholder="Kullanıcı Adı">
                 <input type="password" id="password" placeholder="Parola :)">
-                <button type="button" value="Button" onclick="login()"> Login </button>
+                <button type="button" value="Button" onclick="startApp()"> Login </button>
             </div>
         </div>
 
-        <div data-role="page" data-theme="b" id="languagesPage">
+        <div data-role="main" data-theme="b" id="languagesPage">
 
            <div data-role="collapsible" data-theme="b" data-content-theme="b" >
                 <h2 > Languages </h2>
