--- a/pootle/www/index.html
+++ b/pootle/www/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Pootle Login Girişi</title>    
+    <title>Pootle Login</title>    
     <meta content="text/html; charset=utf-8" http-equiv="content-type" />
 		<script type="text/javascript">
 		function login()
