--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
             </div>
         </div>
 
-        <div data-role="main" data-theme="b" id="languagesPage">
+        <div data-role="page" data-theme="b" id="languagesPage">
 
            <div data-role="collapsible" data-theme="b" data-content-theme="b" >
                 <h2 > Languages </h2>
@@ -57,6 +57,16 @@
             </div>
 
         </div>
+
+        <div data-role="page" data-theme="b" id="projectsPage">
+
+            <div data-role="collapsible" data-theme="b" data-content-theme="b" >
+                <h2 > Projects </h2>
+                <div id="Projects_Content" ></div>
+            </div>
+
+        </div>
+
 
 
     </body>
