--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=2, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.4.min.css" />
         <meta name="msapplication-tap-highlight" content="no" />
@@ -31,6 +31,7 @@
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="js/jquery.mobile-1.4.4.min.js"></script>
+        <script type="text/javascript" src="/js/plugins/jquery.panzoom.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
@@ -66,6 +67,19 @@
             </div>
 
         </div>
+
+        <div data-role="page" data-theme="b" id="filesPage">
+
+            <div data-role="collapsible" data-theme="b" data-content-theme="b" >
+                <h2 > Files </h2>
+                <div id="Files_Content" ></div>
+            </div>
+
+        </div>
+
+
+
+
 
 
 
