Add total and untranslate word page related #3

--- a/www/index.html
+++ b/www/index.html
@@ -78,3 +78,18 @@
         <tbody id="Files_Content"></tbody>
     </table>
 </div>
+
+<div data-role="page" data-theme="b" id="aboutFilePage">
+    <div data-role="header" data-add-back-btn="true" data-back-btn-text="Geri" data-position="fixed">
+        <h1> Hakkında </h1>
+    </div>
+    <table id="AboutFileTable" data-role="table" data-mode="column">
+        <thead>
+        <tr>
+            <th>Toplam</th>
+            <th>Cevirilecek</th>
+        </tr>
+        </thead>
+        <tbody id="AboutFiles_Content"></tbody>
+    </table>
+</div>
