--- a/www/index.html
+++ b/www/index.html
@@ -28,9 +28,9 @@
     <meta name="msapplication-tap-highlight" content="no" />
 
     <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/jquery.mobile-1.4.4.min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
         app.initialize();
     </script>
@@ -45,6 +45,8 @@
     <div data-role="content" data-theme="b" id="Login_Content">
         <input type="text" id="username" placeholder="Kullanıcı Adı" >
         <input type="password" id="password" placeholder="Parola :)" >
+        <input type="checkbox" value="true" id="remember">
+        <label for="remember">Hatirla</label>
         <button type="button" value="Button" onclick="startApp()"> Login </button>
     </div>
 </div>
@@ -80,8 +82,8 @@
 </div>
 
 <div data-role="page" data-theme="b" id="aboutFilePage">
-    <div data-role="header" data-add-back-btn="true" data-back-btn-text="Geri" data-position="fixed">
-        <h1> Hakkında </h1>
+    <div  data-role="header" data-add-back-btn="true" data-back-btn-text="Geri" data-position="fixed">
+        <h1 id="FileName"></h1>
     </div>
     <table id="AboutFileTable" data-role="table" data-mode="column">
         <thead>
