--- a/www/index.html
+++ b/www/index.html
@@ -95,3 +95,24 @@
         <tbody id="AboutFiles_Content"></tbody>
     </table>
 </div>
+
+<<div data-role="page" data-theme="b" id="TranslatePage">
+    <div  data-role="header" data-add-back-btn="true" data-back-btn-text="Geri" data-position="fixed">
+        <h1> Çevir </h1>
+    </div>
+    <div id="TranslateEnglish" >
+
+    </div>
+
+    <div id="TranslateTurkish" class="ui-field-contain">
+
+
+    </div>
+    <fieldset data-role="controlgroup" data-type="vertical">
+        <input id="TranslateWork"  type="checkbox">
+        <label for="TranslateWork">Calisma Gerekli</label>
+    </fieldset>
+    <button type="button" value="Gonder" > Gönder </button>
+    <button type="button" value="Oner" > Öner </button>
+    <button id="sonraki" type="button" value="Sonraki" > Sonraki </button>
+</div>
