--- a/www/index.html
+++ b/www/index.html
@@ -114,7 +114,7 @@
                 <button id="gonder" type="button" value="Gonder" > Gönder </button>
             </td>
             <td>
-                <button type="button" value="Oner" > Öner </button>
+                <button id="oner" type="button" value="Oner" > Öner </button>
             </td>
         </tr>
         <tr>
