Fixed submit button

--- a/www/index.html
+++ b/www/index.html
@@ -111,7 +111,7 @@
     <table>
         <tr>
             <td>
-                <button id="gonder" type="button" value="Gonder" > Gönder </button>
+                <button id="gonder" type="submit" value="Gonder" > Gönder </button>
             </td>
             <td>
                 <button id="oner" type="button" value="Oner" > Öner </button>
