--- a/www/index.html
+++ b/www/index.html
@@ -90,6 +90,7 @@
         <tr>
             <th>Toplam</th>
             <th>Cevirilecek</th>
+            <th>Öneri</th>
         </tr>
         </thead>
         <tbody id="AboutFiles_Content"></tbody>
