--- a/www/index.html
+++ b/www/index.html
@@ -90,7 +90,6 @@
         <tr>
             <th>Toplam</th>
             <th>Cevirilecek</th>
-            <th>Öneri</th>
         </tr>
         </thead>
         <tbody id="AboutFiles_Content"></tbody>
@@ -127,5 +126,23 @@
             </td>
         </tr>
     </table>
+
+    <div data-role="collapsible" data-mini="true">
+            <h4>Sözlük</h4>
+            <ul data-role="listview">
+                <li><a href="#">List item 1</a></li>
+                <li><a href="#">List item 2</a></li>
+                <li><a href="#">List item 3</a></li>
+            </ul>
+    </div>
+
+    <div data-role="collapsible" data-mini="true">
+            <h4>Benzer Çeviriler</h4>
+            <ul data-role="listview">
+                <li><a href="#">List item 1</a></li>
+                <li><a href="#">List item 2</a></li>
+                <li><a href="#">List item 3</a></li>
+            </ul>
+    </div>
 
 </div>
