--- a/www/index.html
+++ b/www/index.html
@@ -89,7 +89,8 @@
         <thead>
         <tr>
             <th>Toplam</th>
-            <th>Cevirilecek</th>
+            <th>Cevirilmemiş</th>
+            <th>Çalışma Gerekli</th>
         </tr>
         </thead>
         <tbody id="AboutFiles_Content"></tbody>
@@ -128,16 +129,7 @@
     </table>
 
     <div data-role="collapsible" data-mini="true">
-            <h4>Sözlük</h4>
-            <ul data-role="listview">
-                <li><a href="#">List item 1</a></li>
-                <li><a href="#">List item 2</a></li>
-                <li><a href="#">List item 3</a></li>
-            </ul>
-    </div>
-
-    <div data-role="collapsible" data-mini="true">
-            <h4>Benzer Çeviriler</h4>
+            <h4>Öneriler</h4>
             <ul data-role="listview">
                 <li><a href="#">List item 1</a></li>
                 <li><a href="#">List item 2</a></li>
