--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,88 @@
 </head>
 <body>
 
+
+
+
+
+<div data-role="page" data-theme="b">
+
+    <div data-role="header" data-theme="b">
+        <h1>Pootle</h1>
+    </div><!-- /header -->
+
+    <div role="main" class="ui-content" data-theme="b" id="loginnPage">
+
+        <h2 class="mc-text-center">Hoşgeldiniz!</h2>
+
+
+        <p class="mc-top-margin-1-5"><b>Hesabınız mı yok?</b></p>
+
+        <a href="sign-up.html" class="ui-btn ui-btn-b ui-corner-all">Yeni Kayıt</a>
+
+        <p></p>
+
+    </div>
+
+</div>
+
+<div data-role="page" data-theme="b">
+
+    <div data-role="header" data-theme="b">
+
+        <h1>Pootle</h1>
+
+    </div><!-- /header -->
+
+    <div role="main" class="ui-content">
+
+        <h3>Yeni Kayıt</h3>
+
+        <label for="txt-first-name">Mahlas</label>
+
+        <input type="text" name="txt-first-name" id="txt-first-name" value="">
+
+        <label for="txt-last-name">Sunucu Adresi</label>
+
+        <input type="text" name="txt-last-name" id="txt-last-name" value="">
+
+        <label for="txt-user">Kullanıcı Adı</label>
+
+        <input type="text" name="txt-user" id="txt-user" value="">
+
+        <label for="txt-password">Parola</label>
+
+        <input type="password" name="txt-password" id="txt-password" value="">
+
+
+        <a href="#dlg-sign-up-sent" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Kaydet</a>
+
+        <div data-role="popup" id="dlg-sign-up-sent" data-dismissible="false" style="max-width:400px;">
+
+            <div data-role="header">
+
+                <h1>Almost done...</h1>
+
+            </div>
+
+            <div role="main" class="ui-content">
+
+                <h3>Confirm Your Email Address</h3>
+
+                <p>We sent you an email with instructions on how to confirm your email address. Please check your inbox and follow the instructions in the email.</p>
+
+                <div class="mc-text-center"><a href="sign-in.html" class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a></div>
+
+            </div>
+
+        </div>
+
+    </div><!-- /content -->
+
+</div><!-- /page -->
+
+
+
 <div data-role="page" data-theme="b" id="loginPage">
     <div data-role="header" data-theme="b">
         <h1> Pootle Giriş </h1>
