--- a/www/index.html
+++ b/www/index.html
@@ -35,12 +35,53 @@
     <script type="text/javascript">
         //app.initialize();
 
+       /* function createTransaction() {
+            var db = window.openDatabase("Database", "1.0", "Cordova Demo",  1000000);
+            db.transaction(populateDB, errorCB, successCB);
+        }*/
+
+        // Populate the database
+        var db = window.openDatabase("Database", "1.0", "Cordova Demo",  1000000);
+        //db.transaction(populateDB, errorCB, successCB);
+        //
+        function populateDB(tx) {
+            tx.executeSql('DROP TABLE USER');
+            tx.executeSql('CREATE TABLE IF NOT EXISTS USER (id auto increment, username, password, serverAddress, nickName)');
+
+            var userName = document.getElementById('txt-user-name').value;
+            var password = document.getElementById('txt-password').value;
+            var serverAddress = document.getElementById('txt-server-address').value;
+            var nick = document.getElementById('txt-nick-name').value;
+
+            tx.executeSql('INSERT INTO USER (username, password, serverAddress, nickName) VALUES ("'+userName+'","'+password+'","'+serverAddress+'","'+nick+'")');
+        }
+
+        // Transaction error callback
+        //
+        function errorCB(tx, err) {
+            alert("Error processing SQL: "+err);
+        }
+
+        // Transaction success callback
+        //
+        function successCB() {
+            alert("success!");
+            window.location.assign("index.html");
+        }
+
+        function onDeviceReady() {
+            var db = window.openDatabase("Database", "1.0", "Cordova Demo",  1000000);
+            db.transaction(populateDB, errorCB, successCB);
+        }
+
 
 
     </script>
 </head>
 
 <body onload="pageLoaded()">
+
+
 
 
 <div data-role="page" data-theme="b" id="welcomepage">
@@ -61,7 +102,7 @@
 
         </div>
 
-        <a id="newrecord" tkey="newrecord" href="Record.html" class="ui-btn ui-btn-b ui-corner-all"></a>
+        <a id="newrecord" tkey="newrecord" href="#recordpage" class="ui-btn ui-btn-b ui-corner-all"></a>
 
 
         <p></p>
@@ -69,6 +110,45 @@
     </div>
 
 </div>
+
+<div data-role="page" data-theme="b" id="recordpage">
+
+    <div data-role="header" data-theme="b">
+
+        <h1>Pootle</h1>
+
+    </div><!-- /header -->
+
+    <div role="main" class="ui-content">
+
+        <h3 tkey="newrecord"></h3>
+
+        <label for="txt-nick-name" tkey="nickName"></label>
+
+        <input type="text" name="txt-nick-name" id="txt-nick-name" value="">
+
+        <label for="txt-server-address" tkey="serverAddress"></label>
+
+        <input type="text" name="txt-server-address" id="txt-server-address" value="">
+
+        <label for="txt-user-name" tkey="userName"></label>
+
+        <input type="text" name="txt-user-name" id="txt-user-name" value="">
+
+        <label for="txt-password" tkey="password"></label>
+
+        <input type="password" name="txt-password" id="txt-password" value="">
+
+
+        <a href="#recordpage" data-rel="pop" onclick="onDeviceReady();" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all" tkey="save"></a>
+
+        <a href="index.html" data-rel="pop" onclick="onDeviceReady();" data-transition="pop" data-position-to="window" id="btn-cancel" class="ui-btn ui-btn-b ui-corner-all" tkey="cancel"></a>
+
+
+    </div><!-- /content -->
+
+</div><!-- /page -->
+
 
 
 <div data-role="page" data-theme="b" id="loginPage">
@@ -111,10 +191,14 @@
 
         <p><a href="mailto:es.altintas@gmail.com" target="_top">es.altintas@gmail.com</a></p>
 
+        <p><a data-role="button" data-theme="a" data-transition="fade" href="https://github.com/COMU/pootle-mobile/tree/phonegap-pootle" data-prefetch>Github</a></p>
+
+
         <header >Version</header>
         <p>1.0.1</p>
 
-        <p><a data-role="button" data-theme="a" data-transition="fade" href="http://www.fsf.org" data-prefetch>GPL</a></p>
+
+        <p><a data-role="button" data-theme="a" data-transition="fade" href="http://www.gnu.org/licenses/gpl-2.0.html" data-prefetch>GPL</a></p>
 
     </div>
 
@@ -147,7 +231,7 @@
         <thead>
         <tr>
             <th tkey="filename"></th>
-            <th tkey="avarage">Ilerleme</th>
+            <th tkey="percent"></th>
         </tr>
         </thead>
         <tbody id="Files_Content"></tbody>
@@ -196,31 +280,22 @@
     <table>
         <tr>
             <td>
-                <button id="gonder" type="submit" value="Gonder" tkey="send"> Gönder</button>
+                <button id="gonder" type="submit" value="Gonder" tkey="send"></button>
             </td>
             <td>
-                <button id="oner" type="button" value="Oner"> Öner</button>
+                <button id="oner" type="button" value="Oner" tkey="suggest"> Öner</button>
             </td>
         </tr>
         <tr>
             <td>
-                <button id="onceki" type="button" value="Onceki">Önceki</button>
+                <button id="onceki" type="button" value="Onceki" tkey="previous"> Önceki</button>
             </td>
             <td>
-                <button id="sonraki" type="button" value="Sonraki"> Sonraki</button>
+                <button id="sonraki" type="button" value="Sonraki" tkey="next"> Sonraki</button>
             </td>
         </tr>
     </table>
 
-    <div data-role="collapsible" data-mini="true">
-        <h4  id="oneri" >Öneriler
-            
-        <ul data-role="listview">
-                    
 
-        </ul>
-
-        </h4>
-    </div>
 
 </div>
