--- a/www/index.html
+++ b/www/index.html
@@ -41,38 +41,52 @@
         }*/
 
         // Populate the database
-        var db = window.openDatabase("Database", "1.0", "Cordova Demo",  1000000);
+       // var db = window.openDatabase("Database", "1.0", "Cordova Demo",  1000000);
         //db.transaction(populateDB, errorCB, successCB);
         //
-        function populateDB(tx) {
-            tx.executeSql('DROP TABLE USER');
-            tx.executeSql('CREATE TABLE IF NOT EXISTS USER (id auto increment, username, password, serverAddress, nickName)');
+        function addUser() {
+           // tx.executeSql('DROP TABLE USER');
+            /*localStorage.setItem("users", JSON.stringify([user1, user2]))
 
-            var userName = document.getElementById('txt-user-name').value;
-            var password = document.getElementById('txt-password').value;
-            var serverAddress = document.getElementById('txt-server-address').value;
-            var nick = document.getElementById('txt-nick-name').value;
+             dashersw [11:18 PM]
+             var users = JSON.parse(localStorage.getItem("users")) (edited)
 
-            tx.executeSql('INSERT INTO USER (username, password, serverAddress, nickName) VALUES ("'+userName+'","'+password+'","'+serverAddress+'","'+nick+'")');
-        }
+             dashersw [11:18 PM]
+             users.push({ username: input.value }) (edited)
 
-        // Transaction error callback
-        //
-        function errorCB(tx, err) {
-            alert("Error processing SQL: "+err);
-        }
+             dashersw [11:19 PM]
+             localStorage.setItem("users", JSON.stringify(users))
 
-        // Transaction success callback
-        //
-        function successCB() {
+             dashersw [11:19 PM]
+             localStorage.setItem("users", JSON.stringify([]))
+
+             dashersw [11:19 PM]
+             localStorage.removeItem("users")*/
+//            localStorage.setItem("users", JSON.stringify([]));
+
+
+            var user = {
+                userName: document.getElementById('txt-user-name').value,
+                password: document.getElementById('txt-password').value,
+                serverAddress: document.getElementById('txt-server-address').value,
+                nick: document.getElementById('txt-nick-name').value
+            };
+
+
+            var users = JSON.parse(localStorage.getItem('users') || '[]');
+
+            users.push(user);
+
+            localStorage.setItem('users', JSON.stringify(users));
+
             alert("success!");
+
             window.location.assign("index.html");
+
+
+
         }
 
-        function onDeviceReady() {
-            var db = window.openDatabase("Database", "1.0", "Cordova Demo",  1000000);
-            db.transaction(populateDB, errorCB, successCB);
-        }
 
 
 
@@ -140,9 +154,9 @@
         <input type="password" name="txt-password" id="txt-password" value="">
 
 
-        <a href="#recordpage" data-rel="pop" onclick="onDeviceReady();" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all" tkey="save"></a>
+        <a href="#recordpage" data-rel="pop" onclick="addUser();" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all" tkey="save"></a>
 
-        <a href="index.html" data-rel="pop" onclick="onDeviceReady();" data-transition="pop" data-position-to="window" id="btn-cancel" class="ui-btn ui-btn-b ui-corner-all" tkey="cancel"></a>
+        <a href="index.html" data-rel="pop" onclick="addUser();" data-transition="pop" data-position-to="window" id="btn-cancel" class="ui-btn ui-btn-b ui-corner-all" tkey="cancel"></a>
 
 
     </div><!-- /content -->
